@@ -1,3 +1,7 @@
+* 2013-11-19 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29438: Deal with changing User-Agent identifier when Apple Media Player jumps in
+
 * 2013-11-18 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 29391: Extend the size of the 'name' column in the 'infostoreReservedPaths' table 
